# orbit-downloader-tribute

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  release-please-config.json
.github/workflows/: ci.yml  dmg.yml  release.yml
docs/design/plans/: 2026-07-16-core-http-engine.md  2026-07-16-gui-base-qtwidgets.md  2026-07-17-content-disposition-filename.md  2026-07-17-ftp-and-download-entry.md  2026-07-18-logging-and-item-context-menu.md  2026-07-18-settings-preferences-scheduler-bandwidth.md  2026-07-19-browser-integration.md  2026-07-22-preferences-sidebar-redesign.md
docs/design/specs/: 2026-07-16-core-http-engine-design.md  2026-07-16-gui-base-qtwidgets-design.md  2026-07-17-content-disposition-filename-design.md  2026-07-17-ftp-and-download-entry-design.md  2026-07-18-logging-and-item-context-menu-design.md  2026-07-18-settings-preferences-scheduler-bandwidth-design.md  2026-07-19-browser-integration-design.md  2026-07-22-preferences-sidebar-redesign-design.md
docs/superpowers/plans/: 2026-07-20-link-intake-ux.md  2026-07-20-theme-and-progress-grid-fix.md  2026-07-21-background-daemon-autostart.md
docs/superpowers/specs/: 2026-07-20-link-intake-ux-design.md  2026-07-20-theme-and-progress-grid-fix-design.md  2026-07-21-background-daemon-autostart-design.md
extension/chrome/: README.md  background.js  manifest.json  options.html  options.js
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  ContentDisposition.cpp  ContentDisposition.h  DownloadManager.cpp  DownloadManager.h  DownloadTask.cpp  DownloadTask.h  DownloadTypes.h  EngineConfigJson.cpp  EngineConfigJson.h  FtpControlChannel.cpp  FtpControlChannel.h  FtpProbe.cpp  FtpProbe.h  FtpReply.cpp  FtpReply.h  FtpSegmentWorker.cpp  FtpSegmentWorker.h  FtpTransport.cpp  FtpTransport.h  HttpProbe.cpp  HttpProbe.h  HttpTransport.cpp  HttpTransport.h  Logger.cpp  Logger.h  Persistence.cpp  Persistence.h  RateLimiter.cpp  RateLimiter.h  SegmentWorker.cpp  SegmentWorker.h  Segmentation.cpp  Segmentation.h  Transport.h
src/gui/: AutostartService.cpp  AutostartService.h  BootOptions.cpp  BootOptions.h  BrowserBridge.cpp  BrowserBridge.h  BrowserBridgeProtocol.cpp  BrowserBridgeProtocol.h  CMakeLists.txt  CategoryFilterProxy.cpp  CategoryFilterProxy.h  CategoryTree.cpp  CategoryTree.h  ClipboardWatcher.cpp  ClipboardWatcher.h  ContextMenuRules.h  CredentialsDialog.cpp  CredentialsDialog.h  DownloadTableModel.cpp  DownloadTableModel.h  DropTargets.cpp  DropTargets.h  FileType.cpp  FileType.h  GridGeometry.cpp  GridGeometry.h  Info.plist.in  MainWindow.cpp  MainWindow.h  NewDownloadDialog.cpp  NewDownloadDialog.h  Orbit.icns  PreferencesDialog.cpp  PreferencesDialog.h  ProgressGridWidget.cpp  ProgressGridWidget.h  Scheduler.cpp  Scheduler.h  SchedulerDialog.cpp  SchedulerDialog.h  (+11 more)
tests/: CMakeLists.txt  FakeTransport.cpp  FakeTransport.h  TestFtpServer.cpp  TestFtpServer.h  TestServer.cpp  TestServer.h  tst_autostart.cpp  tst_bootoptions.cpp  tst_browserbridge.cpp  tst_contentdisposition.cpp  tst_download.cpp  tst_ftp.cpp  tst_gui.cpp  tst_logger.cpp  tst_persistence.cpp  tst_ratelimiter.cpp  tst_scheduler.cpp  tst_segmentation.cpp  tst_settings.cpp  tst_singleinstance.cpp  tst_smoke.cpp  tst_transport.cpp
